# agentic-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  REPRODUCIBILITY.md  START.bat  START.sh  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  run.bat  start.py  test_upload.txt
.github/workflows/: ci.yml  codeql.yml  deploy.yml
app/: config.py  main.py
app/routes/: query.py
app/services/: agent.py  retriever.py
app/utils/: embeddings.py
backend/: __init__.py  config.py  main.py
backend/agents/: __init__.py  critic_agent.py  evaluation_agent.py  generation_agent.py  orchestrator.py  orchestrator_backup.py  query_agent.py  query_rewrite_agent.py  query_rewriting_agent.py  retrieval_agent.py  smart_document_agent.py  smart_fallback_agent.py  validation_agent.py
backend/api/: __init__.py  middleware.py  routes.py
backend/core/: __init__.py  cache.py  embeddings.py  evaluation_harness.py  evaluation_system.py  llm.py  memory.py  reranker.py  retriever.py  startup_check.py  vector_store.py
backend/data/chroma_db/681dadf3-3e99-4c7c-a886-afb0e389144e/: index_metadata.pickle
backend/data/chroma_db/9c6939f1-b7a1-4300-9cfa-cfe37d97e199/: index_metadata.pickle
backend/data/uploads/: sample_document.txt
backend/models/: __init__.py  schemas.py
backend/tests/: test_main.py
backend/tools/: __init__.py  document_loader.py  file_aware_strategy.py  text_splitter.py
backend/utils/: __init__.py  logger.py
data/: README.md
data/docs/: sample_ai_document.txt
data/evaluation/: ground_truth.json
docker/: Dockerfile  docker-compose.yml
docs/: .gitkeep  evaluation_rubric.md  index.md  installation.md  sample_prompts.md
frontend/: index.html  script.js  style.css
scripts/: setup.sh  start.bat
test_data/: sample_questions.txt
tests/: test_10_10_final.py  test_agents.py  test_dense_detection.py  test_level4.py
ui/: index.html  main.js  styles.css
uploads/: README.md
